--- a/theme/snippets/jumplink-variables.js.liquid
+++ b/theme/snippets/jumplink-variables.js.liquid
@@ -111,7 +111,7 @@
       return moneyString.replace('1 135', '{% raw %}{{ amount_no_decimals_with_space_separator }}{% endraw %}');
     }
     
-    console.error("No currency formatter found, set to default!", moneyString);
+    console.warn("No currency formatter found, set to default!", moneyString);
     return '{% raw %}{{ amount }} EUR{% endraw %}';
   }
 
@@ -128,6 +128,8 @@
   window.shop.money_format = setShopifyCurrencyFormatter(moneyString);
   window.shop.moneyFormat = window.shop.money_format;
   window.shop.moneyWithCurrencyFormat = window.shop.money_with_currency_format;
+
+  console.log('money_format: "'+window.shop.money_format+'"', 'shop.money_format: "{{ shop.money_format }}"', 'moneyWithCurrencyFormat: "'+window.shop.moneyWithCurrencyFormat+'"' );
 
   /**
   * Shop
