--- a/theme/snippets/jumplink-linklist.json.liquid
+++ b/theme/snippets/jumplink-linklist.json.liquid
@@ -6,7 +6,7 @@
         'id': '{{linklist.id}}',
     {% endif %}
     {% if linklist.links %}
-        'links': {% include 'links.json' %},
+        'links': {% include 'jumplink-links.json' %},
     {% endif %}
     {% if linklist.title %}
         'title': '{{linklist.title}}',
