--- a/theme/snippets/jumplink-linklists.json.liquid
+++ b/theme/snippets/jumplink-linklists.json.liquid
@@ -1,5 +1,5 @@
 {
     {% for linklist in linklists %}
-        {% include 'linklist.json' %},
+        {% include 'jumplink-linklist.json' %},
     {% endfor %}
 }
