--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -2,15 +2,6 @@
   <div rv-show="cart.item_count | gt 0">
     <div class="row">
 
-      <div class="hidden-xs hidden-sm col-md-3 col-lg-2 border right px-1 table-color">
-        <h3 class="text-weight-normal text-size-1-5">Wie wäre's noch mit ...</h3>
-        <div class="p-r-1">
-          <div class="row">
-            <div recomatic="cart" shop="{{shop.permanent_domain}}" product_ids="{{cart.items|map:'product'|map:'id'|join:','}}"></div>
-          </div>
-        </div>
-      </div>
-
       <div class="col-xs-12 col-md-9 col-lg-10">
         <div class="CartContainer">
 
@@ -23,11 +14,7 @@
               <div class="col-xs-12">
                 <div class="border top px-1 table-color">
                   {% assign place = 'cart-template' %}
-                  {% include 'cart' with place %}
-                  <div class="">
-                    {% include 'storepickup-changes' %}
-                    {% comment %}{% include 'storepickup-custom' %}{% endcomment %}
-                  </div>
+                  {% include 'jumplink-cart' with place %}
                 </div>
               </div>
               <div class="col-xs-12 pt-0">
@@ -40,12 +27,6 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="visible-xs-block visible-sm-block">
-        <h3 class="col-sm-12">Wie wäre's noch mit ...</h3>
-        <div recomatic="cart" shop="{{shop.permanent_domain}}" product_ids="{{cart.items|map:'product'|map:'id'|join:','}}"></div>
-      </div>
-    </div>
   </div>
 
   <div rv-show="cart.item_count | lt 1">
