--- a/theme/templates/page.contact.liquid
+++ b/theme/templates/page.contact.liquid
@@ -3,6 +3,6 @@
     <div class="rte py-1">
       {{ page.content }}
     </div>
-    {% include 'contact-form', contact_title: page.title %}
+    {% include 'jumplink-contact-form', contact_title: page.title %}
   </div>
 </div>
