--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -75,7 +75,7 @@
               <small>Code { product.variant.name }</small>
             </p>
 
-            <product-b2b-add product="product" label="'{{ 'cart.general.add_to_cart' | t | escape }}'"></product-b2b-add>
+            <product-b2b-add product="product" add-label="'{{ 'cart.general.add_to_cart' | t | escape }}'" update-label="'{{ 'cart.general.update_cart' | t | escape }}'"></product-b2b-add>
 
 
 
@@ -87,16 +87,11 @@
             </div>
 
             <p class="rte">
-              {% comment %}
-                TODO style and use bootstrap tabs like on top {% include 'jumplink-product-description-tabs' %}
-              {% endcomment %}
               {{ product.description }}
-              {{ product.metafields.c_f.jumplink_tab_2 }}
             </p>
 
             {% comment %}
-              Prepents via JavaScript!
-              Container for Variant Selections 
+              Prepents via Shopify Product.js
             {% endcomment %}
             <div class="pt-1">
               <product-variant-dropdowns product="product" show-quantity-button="true" start-quantity=10 dropdown-button-class="'w-100'" class="product-variants d-flex justify-content-between align-items-stretch flex-row" /></product-variant-selectors>
