--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -12056,12 +12056,12 @@ b, strong {
         }
     }
 }
-[data-namespace="product"] {
-    .product-price {
-        font-weight: bold;
-        letter-spacing: 0.1rem;
-    }
+.product-price {
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+}
 
+[data-namespace="product"] {
     .product-photo-carousel-arrows {
         .iconset {
             padding: 0.5rem;
@@ -12090,6 +12090,11 @@ b, strong {
 
 [data-toggle] {
     cursor: pointer;
+}
+[data-namespace="cart"] {
+  .cart-price {
+    @extend .product-price;
+  }
 }
 [data-collection-filter] {
     @include media-breakpoint-up(md) {
