modal for products

--- a/src/scss/_cart.scss
+++ b/src/scss/_cart.scss
@@ -2,4 +2,8 @@
   .cart-price {
     @extend .product-price;
   }
+
+  .cart-summary {
+    z-index: $zindex-navbar; // show summary over modal
+  }
 }
