--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -57,7 +57,7 @@
               </p>
               
               <p class="product-legal-text m-0">
-                <a href="{{ pages.vat.url }}" title="{{ pages.versand.title }}">
+                <a href="{{ pages.vat.url }}" title="{{ pages.vat.title }}">
                   <small>{{ 'product.general.legal_price_text' | t: vat_rate: '19' }}</small>
                 </a>
               </p>
