--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -1,33 +1,52 @@
-.product-photo-modal {
-    .modal-content {
-        background-color: $gray-dark;
-        opacity: 0;
-        @include vp-transition(opacity 400ms ease-in-out);
-    }
-    &.show {
+.modal {
+    &.product-photo-modal {
+        overflow: hidden !important;
         .modal-content {
+            background-color: $gray-dark;
+            opacity: 0;
+            @include vp-transition(opacity 400ms ease-in-out);
+        }
+        &.show {
+            .modal-content {
+                opacity: 1;
+            }
+        }
+        .close {
+            position: fixed;
+            top: 1rem;
+            right: 4rem;
             opacity: 1;
+            text-shadow: none;
+            color: #fff;
+        }
+        .arrow-left, .arrow-right {
+            position: fixed;
+            top: 50vh;
+            padding: 50px;
+            margin-top: -60px;
+            cursor: pointer;
+        }
+        .arrow-left {
+            left: 50px;
+        }
+        .arrow-right {
+            right: 50px;
         }
     }
-    .close {
-        position: fixed;
-        top: 1rem;
-        right: 4rem;
-        opacity: 1;
-        text-shadow: none;
-        color: #fff;
-    }
-    .arrow-left, .arrow-right {
-        position: fixed;
-        top: 50vh;
-        padding: 50px;
-        margin-top: -60px;
-        cursor: pointer;
-    }
-    .arrow-left {
-        left: 50px;
-    }
-    .arrow-right {
-        right: 50px;
+
+    &.modal-cart {
+        z-index: $zindex-navbar - 1; // show modal under navbar
+        .modal-content {
+            opacity: 0;
+            @include vp-transition(opacity 400ms ease-in-out);
+            border: none;
+            height: 100vh;
+            width: 100%;
+        }
+        &.show {
+            .modal-content {
+                opacity: 1;
+            }
+        }
     }
 }
