--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -9,20 +9,20 @@
         <div class="row">
 
           {% comment %} Products {% endcomment %} 
-          <div rv-each-product="cart.grouped" data-toggle="modal" data-backdrop="false" data-target="#cart-modal" class="col-xs-12 col-sm-6 col-md-4 col-xl-4">
+          <div rv-each-product="cart.products" data-toggle="modal" data-backdrop="false" data-target="#cart-modal" rv-data-product-handle="product.handle" class="col-xs-12 col-sm-6 col-md-4 col-xl-4">
 
             {% comment %} Product {% endcomment %} 
             <div class="product-item mx-2 mb-4">
 
               <div class="image-wrap">  
-                <div class="background-box {{ settings.products_aspect_ratio }}" rv-background-image="product.image" rv-title="product.title"></div>
+                <div class="background-box {{ settings.products_aspect_ratio }}" rv-background-image="product.featured_image" rv-title="product.title"></div>
                 <div class="caption">
                   <p rv-show="{{ settings.products_show_vendor }}" class="vendor text-nowrap">
                     { product.vendor }
                   </p>
                 
                   <p rv-show="{{ settings.products_show_title }}" class="title text-nowrap">
-                    { product.product_title }
+                    { product.title }
                   </p>
                 </div>
               </div>
@@ -36,7 +36,7 @@
       <div class="col-xs-12 col-md-3 fixed-right cart-summary">
 
          {% comment %} Summary {% endcomment %} 
-        <h3 class="mb-4 text-uppercase">{ cart.grouped | size } Items</h3>
+        <h3 class="mb-4 text-uppercase">{ cart.products | size } Items</h3>
         <p class="mb-0 cart-price">{ cart.total_price | money }</p>
         <p class="product-legal-text mt-0">
           <small>{{ 'product.general.legal_price_text' | t: vat_rate: '19' }}</small>
@@ -71,10 +71,26 @@
                 <div class="slick-slider">
 
                   {% comment %} Products {% endcomment %} 
-                  <div rv-each-product="cart.grouped">
+                  <div rv-each-product="cart.products">
 
                     <div class="row">
-                      {% comment %} TODO get product with barba {% endcomment %} 
+            
+                      {% comment %} TODO get product with barba {% endcomment %}
+                      <div class="product-photos col-xs-12 col-md-6 mb-1">
+                        <a class="product-photo-carousel-item">
+                            <div class="background-box {{settings.products_aspect_ratio}}" style="background-image: url({{ image | img_url: 'master' }});" title="{{ image.alt | escape }}"></div>
+                            {% if settings.products_show_page_number_in_carousel %}
+                                <div class="carousel-caption bottom right">
+                                    <div class="carousel-caption-wrapper">
+                                        {{ forloop.index }}/{{ forloop.length }}
+                                    </div>
+                                </div>
+                            {% endif %}
+                        </a>
+                      </div>
+                      <div class="product-details col-xs-12 col-md-6">
+                        <product product="product" vendor-url="'{{ vendor_url }}'"></product>
+                      </div>
                     </div>
                       
 
