--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -37,7 +37,6 @@
           </div>
           
           <div class="product-details col-xs-12 col-md-4">
-
             {% comment %}
               Do we have a collection that has the same name as our product vendor name?
               If we do, let's have the vendor link point to it.
@@ -49,68 +48,7 @@
             {% else %}
               {% assign vendor_url = product.vendor | url_for_vendor %}
             {% endif %}
-            <h1 class="product-vendor mb-3">{{ product.vendor | link_to: vendor_url }}</h1>
-                      
-            <div class="my-1">
-              <p class="m-0">
-                <span class="product-price">{ product.variant.price | money }</span>
-              </p>
-              
-              <p class="product-legal-text m-0">
-                <a href="{{ pages.vat.url }}" title="{{ pages.vat.title }}">
-                  <small>{{ 'product.general.legal_price_text' | t: vat_rate: '19' }}</small>
-                </a>
-              </p>
-
-              {% comment %}
-                Conntent set via JavaScript!
-                Container for Variant Selections 
-              {% endcomment %}
-              {% if settings.product_show_availability %}
-                <p class="availability">
-              {% endif %}
-            </div>
-
-            <p class="product-title">
-              <small>Code { product.variant.name }</small>
-            </p>
-
-            <product-b2b-add product="product" add-label="'{{ 'cart.general.add_to_cart' | t | escape }}'" update-label="'{{ 'cart.general.update_cart' | t | escape }}'"></product-b2b-add>
-
-
-
-            <p class="lead mb-0">
-              Select your Order
-            </p>
-            <div class="mb-2" data-toggle="colorcard" data-target='#handle-{{product.handle}} [data-colorcard="placeholder"]'>
-              {% include 'jumplink-iconset', name: 'arrow', direction: 'right', color: 'black' %} Show Color Card
-            </div>
-
-            <p class="rte">
-              {{ product.description }}
-            </p>
-
-            {% comment %}
-              Prepents via Shopify Product.js
-            {% endcomment %}
-            <div class="pt-1">
-              <product-variant-dropdowns product="product" show-quantity-button="true" start-quantity=10 dropdown-button-class="'w-100'" class="product-variants d-flex justify-content-between align-items-stretch flex-row" /></product-variant-selectors>
-            </div>
-
-            <product-b2b-button product="product"></product-b2b-button>
-
-            <div class="pt-4">
-              <product-b2b-list product="product"></product-b2b-list>
-            </div>
-
-            {% comment %}
-              All themes by Shopify should support the Product Reviews app out of the box.
-              https://apps.shopify.com/product-reviews
-            {% endcomment %}
-            <div id="handle-{{product.handle}}_shopify-product-reviews" data-id="{{ product.id }}">
-              {{ product.metafields.spr.reviews }}
-            </div>
-            
+            <product product="product" vendor-url="'{{ vendor_url }}'"></product>
           </div>
         
         </div>
