product images slideshow in product slideshow on cart

--- a/src/scss/_pagination.scss
+++ b/src/scss/_pagination.scss
@@ -26,7 +26,10 @@
 }
 
 .pagination {
-  &.slide-buttons {
+  &.slide-buttons, &.modal-buttons {
+      .page-item {
+        cursor: pointer;
+      }
       .iconset {
           &.arrow, &.arrow-big {
               display: inline-block;
