--- a/theme/snippets/jumplink-breadcrumbs-slide-buttons.liquid
+++ b/theme/snippets/jumplink-breadcrumbs-slide-buttons.liquid
@@ -1,12 +1,12 @@
-<div data-barba="freeze" class="container">
+<div data-barba="freeze" class="container pt-1">
 
   <div class="row">
 
-    <div class="col-sm-8">
+    <div class="col-xs-8">
       {% include 'jumplink-breadcrumbs' %}
     </div>
 
-    <div class="col-xs-12 col-sm-4 d-flex justify-content-end">
+    <div class="col-xs-4 d-flex justify-content-end">
       {% if collection %}
         {% if collection.previous_product or collection.next_product %}
           <ul class="pagination slide-buttons">
