--- a/theme/snippets/tpl-jumplink-product-images-slick.liquid
+++ b/theme/snippets/tpl-jumplink-product-images-slick.liquid
@@ -3,7 +3,7 @@
 {% endcomment %}
 <div class="row" data-colorcard="placeholder">
 
-  <div class="hidden-sm-down col-sm-2">
+  <div rv-if="showThums" rv-class="thumColClass">
     <div class="mb-1">
       <div class="product-images-arrows d-flex justify-content-between">
         {% comment %}
@@ -19,18 +19,18 @@
     </div>
 
     <div rv-id="slickThumsID">
-      <div rv-each-image="product.images" rv-data-index="%image%" class="thumb mb-1">
+      <div rv-each-image="product.images" rv-hide="product.images | last %image%" rv-data-index="%image%" class="thumb mb-1">
         <div class="background-box {{settings.products_aspect_ratio}}" rv-background-image="image" rv-title="product.title"></div>
       </div>
     </div>
 
   </div>
 
-  <div class="col-xs-12 col-sm-10">
+  <div rv-class="imageColClass">
 
     <div class="product-photo-carousel" rv-id="slickID" data-toggle="modal-no-touch" data-backdrop="false" data-target="#product-photo-modal-{{product.handle}}">
 
-      <a rv-each-image="product.images" class="product-photo-carousel-item">
+      <a rv-each-image="product.images" rv-hide="product.images | last %image%" class="product-photo-carousel-item">
         <div class="background-box {{settings.products_aspect_ratio}}" rv-background-image="image" rv-title="product.title"></div>
       </a>
 
