cart summary navbar for small devices

--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -11993,6 +11993,9 @@ b, strong {
   position: fixed;
   right: 0;
 }
+.bg-body {
+  background-color: $body-bg;
+}
 [data-namespace="customers-register"],
 [data-namespace="customers-login"] {
     .form-group, .btn-group, h1 {
