close all modals on page change

--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -11984,6 +11984,10 @@ b, strong {
         }
     }
 }
+
+.modal-backdrop {
+    display: none !important; // WORKAROUND for bug?
+}
 .fixed-right {
   position: fixed;
   right: 0;
