--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -10,7 +10,7 @@
         <div class="row">
 
           {% comment %} Products {% endcomment %}
-          <div rv-each-product="cart.products" data-toggle="product-modal" rv-data-index="%product%" rv-data-product-handle="product.handle" class="col-xs-12 col-sm-6 col-md-4 col-xl-4">
+          <div rv-each-product="cart.products" data-toggle="product-modal" rv-data-product-index="%product%" rv-data-product-handle="product.handle" class="col-xs-12 col-sm-6 col-md-4 col-xl-4">
 
             {% comment %} Product {% endcomment %}
             <div class="product-item mx-2 mb-4">
@@ -121,9 +121,8 @@
               <div class="col-xs-12 col-md-9 product-details-slider slick-slider bg-body">
 
                 {% comment %} Products {% endcomment %}
-                <div rv-each-product="cart.products">
+                <div rv-each-product="cart.products" rv-data-product-index="%product%" rv-data-product-handle="product.handle">
                   <div class="row mx-0">
-                    {% comment %} TODO get product with barba {% endcomment %}
                     <div class="product-photos col-xs-12 col-md-6 mb-1">
                       <product-images-slick product="product" show-thums="false" has-colorcard="true"></product-images-slick>
                     </div>
