--- a/theme/snippets/tpl-jumplink-product.liquid
+++ b/theme/snippets/tpl-jumplink-product.liquid
@@ -1,4 +1,3 @@
-
 <h1 class="product-vendor mb-3">
   <a rv-href="vendorUrl" rv-title="product.vendor">{ product.vendor }</a>
 </h1>
@@ -15,7 +14,7 @@
   </p>
 
   {% comment %}
-    TODO
+    TODO in rivets.js
   {% endcomment %}
   {% if settings.product_show_availability %}
     <p class="availability"></p>
@@ -33,7 +32,7 @@
 <p class="lead mb-0">
   Select your Order
 </p>
-<div class="mb-2" data-toggle="colorcard" rv-data-target="'#handle-' | append product.handle | append ' [data-colorcard='placeholder']'">
+<div class="mb-2" data-toggle="colorcard" rv-data-product-handle="product.handle" rv-data-image="product.images | array_last">
   {% include 'jumplink-iconset', name: 'arrow', direction: 'right', color: 'black' %} Show Color Card
 </div>
 
