--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -7,7 +7,7 @@
   {% include 'jumplink-breadcrumbs-slide-buttons' %}
 
   <div class="container">
-    <div class="product handle-{{product.handle}}" id="handle-{{product.handle}}" itemscope itemtype="http://schema.org/Product">
+    <div data-product-handle="{{product.handle}}" class="product handle-{{product.handle}}" id="handle-{{product.handle}}" itemscope itemtype="http://schema.org/Product">
       
       <meta itemprop="url" content="{{ shop.url }}{{ product.url }}" />
       <meta itemprop="image" content="{{ product | img_url: 'grande' }}" />
